Bug 260294 - When Kalender has been started from invitation mail, return to list brings in a wierd step
Summary: When Kalender has been started from invitation mail, return to list brings in...
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 17:20 UTC by Björn Balazs
Modified: 2011-02-15 17:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
unwanted screen (14.28 KB, image/png)
2010-12-16 17:20 UTC, Björn Balazs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-12-16 17:20:53 UTC
Created attachment 54827 [details]
unwanted screen

Version:           unspecified (using Devel) 
OS:                Windows CE

Make sure calender is not running. Now, in an invitation mail to an event click on "Check my calendar" -> the calendar applications starts showing the day view. now click on the "back to list"-button in the lower right corner. Now you get the screen attached. If you again press the "back to list"-button in the lower right corner you see the home screen.

Please make sure the dialogue that is shown attached does not appear.

Reproducible: Didn't try
Comment 1 Tobias Koenig 2010-12-20 11:32:15 UTC
SVN commit 1208020 by tokoe:

Remove the showEventView method.

This method is not needed anymore, because the state machine will
make sure the right view is visible.
That fixes the bug of the additional state that has been pushed
when the 'Check my Calendar' functionality is triggered in kmail-mobile
on an invitation mail.

BUG: 260294


 M  +0 -5      korganizer-mobile.qml  
 M  +2 -4      mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208020