Remove the showEventView method.

This method is not needed anymore, because the state machine will
make sure the right view is visible.
That fixes the bug of the additional state that has been pushed
when the 'Check my Calendar' functionality is triggered in kmail-mobile
on an invitation mail.

BUG: 260294

svn path=/trunk/KDE/kdepim/mobile/; revision=1208020